<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.MenuFragment"
   >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textColor="@color/textPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btnSoloMode"
        style="@style/PrimaryButtonGreen.menu"
        android:text="@string/singleplayer_mode" />

    <Button
        android:id="@+id/btnMultiMode"
        style="@style/PrimaryButtonGreen.menu"
        android:layout_marginTop="12dp"
        android:text="@string/multiplayer_mode" />

    <Button
        android:id="@+id/btnRules"
        style="@style/PrimaryButtonGreen.menu"
        android:layout_marginTop="12dp"
        android:text="@string/rules" />



</LinearLayout>