<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.multiplayerSetup.MultiplayerSetupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_nicname"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="24dp"
                android:textSize="20sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/your_nickname"
                app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius"
                app:boxStrokeWidthFocused="2dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/choose_mode"
                android:textColor="@color/textPrimary"
                android:textSize="20sp" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbEmoji"
                    style="@style/CustomRadioButton"
                    android:text="@string/emoji_mode" />

                <RadioButton
                    android:id="@+id/rbRiddle"
                    style="@style/CustomRadioButton"
                    android:text="@string/riddle_mode" />

                <RadioButton
                    android:id="@+id/rbTest"
                    style="@style/CustomRadioButton"
                    android:text="@string/test_mode" />

            </RadioGroup>

        </LinearLayout>
    </ScrollView>


    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/strokeColor" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Button
            android:id="@+id/btnStartGame"
            style="@style/BigButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/find_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>