<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.result.ResultFragment">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/result_title"
        android:textColor="@color/textPrimary"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/textSecondary"
        android:textSize="16sp"
        tools:text="@string/result_mode_emoji" />


    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/textSecondary"
        android:textSize="20sp"
        tools:text="123" />


    <TextView
        android:id="@+id/tvHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textColor="@color/textSecondary"
        android:textSize="16sp"
        tools:text="12" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnRetry"
            style="@style/PrimaryButtonGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_retry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnHome"
            style="@style/OutlinedButtonGreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/btn_home"
            app:layout_constraintEnd_toEndOf="@id/btnRetry"
            app:layout_constraintStart_toStartOf="@id/btnRetry"
            app:layout_constraintTop_toBottomOf="@id/btnRetry" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>