<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/quizRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tvQuestionIsNew"
            style="@style/QuizProgressText.secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_question"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvQuestion"
            tools:text="🏀🐐"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="60dp"
            android:textColor="@color/textPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/enter_answer"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textSecondary"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuestion" />

        <LinearLayout
            android:id="@+id/optionsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAnswer">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOption1"
                style="@style/OptionButton"
                tools:text="Option 1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOption2"
                style="@style/OptionButton"
                tools:text="Option 2"
                android:layout_marginTop="12dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOption3"
                style="@style/OptionButton"
                tools:text="Option 3"
                android:layout_marginTop="12dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOption4"
                style="@style/OptionButton"
                tools:text="Option 4"
                android:layout_marginTop="12dp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/optionsContainer">

            <Button
                android:id="@+id/btnCheck"
                style="@style/PrimaryButtonGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />

            <Button
                android:id="@+id/btnSkip"
                style="@style/OutlinedButtonGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/skip" />
        </LinearLayout>

        <Button
            android:id="@+id/btnHint"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>